# Tutorial

./: LICENSE  README.md  app.py  pyproject.toml  replit.nix
static/css/: styles.css
static/js/: script.js
templates/: base.html  home.html  image_enhancer.html  image_perferation.html  image_to_lines.html  index.html
